# ruapu

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  LICENSE  README.md  build.rs  main.c  pyproject.toml  ruapu-binding.c  ruapu-py.c  ruapu.h  setup.py
.github/workflows/: ci-qemu.yml  ci.yml  pypi.yml  release-python.yml  windows.yml
Android/: CMakeLists.txt  build.sh
cangjie/: README.md  cjpm.toml
cangjie/c-src/: CMakeLists.txt  ruapu-binding.c
cangjie/src/: main.cj
cangjie/src/ruapu/: ruapu.cj
cpp/: ruapu.hpp  test_ruapu.cpp
dart/: build.ps1  build.sh  main.dart  pubspec.yaml  ruapu_api.dart
dart/ruapu-api/: CMakeLists.txt  ruapu.c  ruapu.def
erlang/: .gitignore  CMakeLists.txt  Makefile  Makefile.win  README.md  rebar.config  release.sh
erlang/c_src/: ruapu.c
erlang/src/: ruapu.app.src  ruapu.erl  ruapu_nif.erl
examples/: ruapu.rs
fortran/: CMakeLists.txt
fortran/src/: CMakeLists.txt  main.f90  ruapu-binding.c  ruapu-binding.f90
go/: go.mod  main.go
go/ruapu/: ruapu-binding.go
haskell/: Ruapu.hs  ruapu.c  ruapu.cabal
haskell/src/: ruapu.h
java/: CMakeLists.txt  Example.java  Ruapu.java  build.bat  build.gradle.kts  build.ps1  build.sh  ruapu_binding.c  ruapu_binding.h  settings.gradle.kts
java/gradle/wrapper/: gradle-wrapper.properties
java/src/main/java/ruapu/: Ruapu.java
lua/: ruapu-0.1-1.rockspec  ruapu-binding.c
pascal/: CMakeLists.txt  Readme.md  ruapu-binding.c  ruapu.lpi  ruapu.lpr  ruapu_pascal.pas
python/: pyproject.toml  ruapu-binding.c  setup.py
ruapu-ios/ruapu-ios/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
ruapu-ios/ruapu-ios.xcodeproj/: project.pbxproj
ruapu-ios/ruapu-ios.xcodeproj/project.xcworkspace/xcuserdata/mizu-bai.xcuserdatad/: UserInterfaceState.xcuserstate
ruapu-ios/ruapu-ios.xcodeproj/xcshareddata/xcschemes/: ruapu-ios.xcscheme
ruapu-ios/ruapu-ios.xcodeproj/xcuserdata/mizu-bai.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ruapu-ios/ruapu-ios.xcodeproj/xcuserdata/mizu-bai.xcuserdatad/xcschemes/: xcschememanagement.plist
ruapu-ios/ruapu-ios/Base.lproj/: Main.storyboard
ruapu-ios/ruapu-iosTests/: ruapu_iosTests.m
ruapu-ios/ruapu-iosUITests/: ruapu_iosUITests.m  ruapu_iosUITestsLaunchTests.m
rust/: Cargo.toml  build.rs
rust/examples/: ruapu.rs
rust/src/: lib.rs  ruapu-binding.c
src/: lib.rs
vlang/: ruapu.v  v.mod
vlang/ruapu/: wrapper.c.v
