cabal-version:      3.0
name:               ruapu
version:            0.1.0
synopsis:           Detect CPU ISA features with single-file
homepage:           https://github.com/nihui/ruapu
license:            MIT
author:             nihui
maintainer:         shuizhuyuanluo@126.com
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:             warnings
    exposed-modules:    Ruapu
    build-depends:      base ^>=4.17.2.1
    default-extensions: ForeignFunctionInterface
    hs-source-dirs:     src
    c-sources:          src/ruapu.c src/ruapu.h
    default-language:   Haskell2010
